--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "formik": "^2.4.6",
+    "jalali-moment": "^3.3.11",
     "leaflet": "^1.9.4",
     "next": "15.2.4",
     "react": "^19.0.0",
