--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/jalaali": "^3.2.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.5.0",
+    "date-object": "^2.1.6",
     "formik": "^2.4.6",
     "jalali-moment": "^3.3.11",
     "leaflet": "^1.9.4",
+    "moment-jalaali": "^0.10.4",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-date-object": "^2.1.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
